<resources>
    <string name="app_name">Chore Wizard</string>
    <string name="welcome_message">Welcome to Chore Wizard!
        Use this app to add household members and chores and
        assign those chores to the members. Members will receive
        notifcations to be reminded to do their chores.
        Happy cleaning!</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_add_member">AddMemberActivity</string>
    <string name="member_name_field">Member Name</string>
    <string name="member_phone_field">Member Phone Number</string>
    <string name="chore_name_field">Chore Name</string>
    <string name="chore_frequency_field">Chore Frequency</string>
    <string name="ok">OK</string>
    <string name="add_member">Add Member</string>
    <string name="hello_message">Hello, ______!</string>

    <string name="LOGIN_PREFS">edu.uw.tacoma.aclanton.chorewizard.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="action_logout" />
    <string name="title_activity_manage_chores">ManageChoresActivity</string>

    <string name="CREATE_ASSIGNEDCHORE_SQL">
        CREATE TABLE IF NOT EXISTS AssignedChored
        (name TEXT PRIMARY KEY, chore TEXT)
    </string>

    <string name="DROP_ASSIGNEDCHORE_SQL">
        DROP TABLE IF EXISTS AssignedChore
    </string>

</resources>
