<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    tools:context="tcss450.uw.edu.chorewizard.AddMemberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:hint="@string/member_name_field"
        android:id="@+id/Member_Name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <EditText
        android:hint="@string/member_phone_field"
        android:id="@+id/Member_Phone"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/ok"
        android:id="@+id/add_member_done_button"
        android:onClick="saveMemberInfo" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
