<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tcss450.uw.edu.chorewizard.AddChoreActivity"
    android:orientation="vertical"
    android:background="#B7C0EF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/addChoreImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/cwaddchore"
            />

    <EditText
        android:hint="@string/chore_name_field"
        android:id="@+id/Chore_Name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <EditText
        android:hint="@string/chore_frequency_field"
        android:id="@+id/Chore_Frequency"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/ok"
        android:id="@+id/add_chore_done_button"
        android:onClick="saveChoreInfo"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
</android.support.design.widget.CoordinatorLayout>